--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   margin-left: auto;
   margin-right: auto;
   text-align: center;
+  margin-top: 20px;
   padding: 20px;
   background-color: rgb(207, 108, 50);
   border-radius: 10px;
@@ -12,4 +13,14 @@
 .title {
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+.button {
+  width: 60px;
+  height: 20px;
+  color: darkgoldenrod;
+  background-color: cornsilk;
+  border: 1px solid rgba(75, 67, 67, 0.2);
+  border-radius: 4px;
+  cursor: pointer;
 }
